--- a/app/detalle/detalle.html
+++ b/app/detalle/detalle.html
@@ -13,6 +13,10 @@
         <br>
         <br>
     </div>
+    <button class="btn-custom" ng-click="appCtrl.goTo('/main')">Volver</button>
+    <br>
+    <br>
+
 
     <div id="comentario">
         <div text-angular ng-model="detalleCtrl.comentario"></div>
