--- a/app/main/main.html
+++ b/app/main/main.html
@@ -29,6 +29,10 @@
         <div class="main-post-content">
             <div ng-bind-html="post.value.detalle"></div>
         </div>
+        <div style="display: flex; width: 100%; justify-content: space-between;">
+            <span style="margin-left: 20px;">{{post.value.cant_comments}} comentarios</span>
+            <span style="margin-right: 20px;"></span>
+        </div>
         <br>
         <br>
     </div>
