--- a/app/main/main.html
+++ b/app/main/main.html
@@ -7,14 +7,9 @@
     <!--font-weight: 700;-->
     <!--color: whitesmoke;">HACE RUIDO</h1>-->
     <div style="width: 100%; display: flex; justify-content: center; align-items: center">
-        <img class="logo-main" src="images/logo.svg" height="200px" ng-click="appCtrl.goTo('/main')" alt="">
+        <img class="logo-main" src="images/logo.svg" ng-click="appCtrl.goTo('/main')" alt="">
     </div>
-    <h2 style="width: 100%;
-    text-align: center;
-    font-size: 50px;
-    margin-bottom: 250px;
-    font-weight: 700;
-    color: whitesmoke;">Palabras que suenan</h2>
+    <h2 id="subtitulo" >Palabras que suenan</h2>
 
     <div id="list-start"></div>
     <div ng-if="!appCtrl.lista" ac-animate animation-in="parrafo-in" correction-out="-100" class="main-post"
