--- a/app/main/main.html
+++ b/app/main/main.html
@@ -9,7 +9,7 @@
     <div style="width: 100%; display: flex; justify-content: center; align-items: center">
         <img class="logo-main" src="images/logo.svg" ng-click="appCtrl.goTo('/main')" alt="">
     </div>
-    <h2 id="subtitulo" >Palabras que suenan</h2>
+    <h2 id="subtitulo" >Palabras que rebotan</h2>
 
     <div id="list-start"></div>
     <div ng-if="!appCtrl.lista" ac-animate animation-in="parrafo-in" correction-out="-100" class="main-post"
