--- a/app/detalle/detalle.html
+++ b/app/detalle/detalle.html
@@ -18,6 +18,8 @@
     <br>
 
 
+
+    <h2 style="width: 100%; margin: 10px 0 10px 0; text-align: center; font-weight: bold; font-size: 30px;">Comentar</h2>
     <div id="comentario">
         <div text-angular ng-model="detalleCtrl.comentario"></div>
         <button class="btn-custom" ng-click="detalleCtrl.comentar(appCtrl.authData)">Comentar</button>
