--- a/app/administracion/administracion.html
+++ b/app/administracion/administracion.html
@@ -31,7 +31,7 @@
         </div>
         <div>
             <label>Detalle</label>
-            <div text-angular ng-model="administracionCtrl.post.value.detalle"></div>
+            <div class="text-administracion" text-angular ng-model="administracionCtrl.post.value.detalle"></div>
 
         </div>
 
