--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,10 @@
                         'https://cdn.firebase.com/js/client/2.4.0/firebase.js',
                         '//cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular-rangy.min.js',
                         '//cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular-sanitize.min.js',
-                        '//cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js',
+//                        '//cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js',
+                        'bower_components/textAngular/dist/textAngular.min.js',
+                        'bower_components/textAngular/dist/textAngularSetup.js',
+                        'bower_components/ac-angular-utils/ac-utils.min.js',
                         'bower_components/ac-angular-utils/ac-utils.min.js',
                         'ac-angular-animate/ac-animate.min.js',
                         'bower_components/ac-angular-utils/ac-utils.min.js',
