--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,13 @@
     <i class="fa fa-chevron-up"></i>
 </div>
 
+<div class="footer">
+    <p>
+        2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
+        AC-Desarrollos - 011-3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>  -
+        All Rights Reserved</p>
+</div>
+
 
 
 
