--- a/app/nav/nav.html
+++ b/app/nav/nav.html
@@ -1,7 +1,7 @@
 <div ng-controller="NavCtrl as navCtrl">
     <div id="nav">
         <div style="">
-            <img src="images/logo.gif" height="50px" ng-click="appCtrl.goTo('/main')" alt="" style="cursor: pointer">
+            <img src="images/logo.svg" height="50px" ng-click="appCtrl.goTo('/main')" alt="" style="cursor: pointer">
         </div>
 
         <div style="display: flex; flex-direction: row; align-items: center; ">
