--- a/app/index.html
+++ b/app/index.html
@@ -143,7 +143,7 @@
                 }
         );
     </script>
-    <title>Hace Ruido</title>
+    <title>Puro Ruido</title>
     <link rel="stylesheet" href="stylesheets/screen.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="textAngular.css">
